# project4_s2

./: .gitignore  API.md  HANDOFF_C.md  PROTOCOL.md  README.md  start.sh  start_frontend.sh
backend/: config.py  server.py
backend/common/: enums.py  interfaces.py  models.py
backend/communication/: api_service.py  command_sender.py  heartbeat_manager.py  socket_client.py
backend/task_planner/: action_scheduler.py  avoidance_planner.py  motion_planner.py  nlp_parser.py  obstacle_detector.py  position_tracker.py  reactive_avoidance.py  slam_coordinator.py  task_manager.py
backend/vision/: vision_bridge.py
d435i_obstacle_avoidance/: README.md  requirements.txt
d435i_obstacle_avoidance/docs/: algorithm_vfh.md  algorithm_yolo.md
d435i_obstacle_avoidance/src/: navigation_simulator.py  obstacle_avoidance.py  obstacle_avoidance_yolo.py  robot_side.py  robot_simulator.py  vision_server.py
frontend/: .gitignore  PRD.docx  PRD_updated.docx  README.md
frontend/control/: app.js  index.html  style.css
frontend/files2/: index.html  mock-server.js
frontend/scheduler/: app.js  index.html  style.css
gazebo_simulation/: CMakeLists.txt  README.md  package.xml
gazebo_simulation/launch/: bringup.launch
gazebo_simulation/robot_description/urdf/: robot.urdf
gazebo_simulation/scripts/: gazebo_bridge.py  run_simulation.sh
gazebo_simulation/worlds/: obstacle_world.world
obstacle_avoidance/: README.md  requirements.txt
obstacle_avoidance/docs/: algorithm.md
obstacle_avoidance/src/: basic_viewer.py  obstacle_avoidance.py  obstacle_detection.py
(+6 files in other folders)
